openmediavault-lvm2 (0.3.0.8) stable; urgency=low

  * Code was modified to meet the coding guidelines.
  * Mantis 0000581: Add deb-triggers 'update-locale' and 'update-fileperms'
    to replace omv_install_locale and omv_install_fixperms in postinst
    scripts.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 28 Aug 2012 21:05:13 +0200

openmediavault-lvm2 (0.3.0.7) stable; urgency=low

  * Code cleanup.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 24 Aug 2012 22:05:56 +0200

openmediavault-lvm2 (0.3.0.6) stable; urgency=low

  * Update locales.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 29 Jun 2012 22:32:19 +0200

openmediavault-lvm2 (0.3.0.5) stable; urgency=low

  * Mantis 0000503: Volume groups containing the character '-' are not
    processed correctly in association with logical volumes.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 10 Jun 2012 02:56:06 +0200

openmediavault-lvm2 (0.3.0.4) stable; urgency=low

  * Update locales.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 25 May 2012 21:42:47 +0200

openmediavault-lvm2 (0.3.0.3) stable; urgency=low

  * Fix error message when extending a volume group.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2012 19:37:10 +0200

openmediavault-lvm2 (0.3.0.2) stable; urgency=low

  * Translate various strings.
  * Update locales.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 27 Apr 2012 16:07:41 +0200

openmediavault-lvm2 (0.3.0.1) stable; urgency=low

  * Update locales.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 26 Apr 2012 22:42:25 +0200

openmediavault-lvm2 (0.3) stable; urgency=low

  * Adapt to openmediavault 0.3

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 02 Apr 2012 22:24:41 +0200

openmediavault-lvm2 (0.2) stable; urgency=low

  * Disallow spaces in volume group and logical volume names.
