@@ -477,6 +477,17 @@ Ext.override(Ext.form.Checkbox, {
 });
 
 ////////////////////////////////////////////////////////////////////////////////
+// Ext.form.SliderField
+////////////////////////////////////////////////////////////////////////////////
+
+Ext.apply(Ext.form.SliderField.prototype, {
+	setIncrement : function(v) {
+		this.slider.increment = v;
+		return this;    
+	}
+});
+
+////////////////////////////////////////////////////////////////////////////////
 // Ext.grid.Column
 ////////////////////////////////////////////////////////////////////////////////
 
