@@ -1,6 +1,7 @@
 openmediavault-lvm2 (0.3.0.8) stable; urgency=low
 
   * Code was modified to meet the coding guidelines.
+  * Improve create/extend logical volume dialogs.
   * Mantis 0000581: Add deb-triggers 'update-locale' and 'update-fileperms'
     to replace omv_install_locale and omv_install_fixperms in postinst
     scripts.
